--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/theme"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".activity.RegisterActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,15 +27,17 @@
                 android:text="Đăng ký"
                 android:textColor="@color/colorWhite"
                 android:textSize="40sp" />
+
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:scaleType="fitXY"
                 android:src="@mipmap/ic_app_foreground" />
+
             <LinearLayout
-                android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -152,9 +155,9 @@
 
                 <RadioGroup
                     android:id="@+id/radiobuttondangky"
-                    android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
 
                     <RadioButton
                         android:id="@+id/nam"
@@ -173,27 +176,28 @@
                         android:textStyle="bold" />
 
                 </RadioGroup>
+
                 <RadioGroup
                     android:id="@+id/radioCheck"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
                     <RadioButton
                         android:id="@+id/nhanvien"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Nhân viên"
-                        android:textStyle="bold"
                         android:textColor="@color/colorWhite"
-                        />
+                        android:textStyle="bold" />
+
                     <RadioButton
                         android:id="@+id/khachhang"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Khách hàng"
-                        android:textStyle="bold"
                         android:textColor="@color/colorWhite"
-                        />
+                        android:textStyle="bold" />
 
                 </RadioGroup>
             </LinearLayout>
