--- a/app/src/main/res/layout/dialog_edit_account.xml
+++ b/app/src/main/res/layout/dialog_edit_account.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@color/colorWhite"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
-    android:layout_height="650dp">
+    android:layout_height="650dp"
+    android:background="@color/colorWhite"
+    android:orientation="vertical">
+
     <RelativeLayout
-        android:gravity="top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="top">
+
         <ImageView
-            android:layout_margin="5dp"
             android:id="@+id/imgcloseeditaccount"
-            android:layout_alignParentRight="true"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/ic_close"/>
+            android:layout_alignParentRight="true"
+            android:layout_margin="5dp"
+            android:src="@drawable/ic_close" />
     </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,9 +35,6 @@
             android:textSize="20sp" />
 
 
-
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,6 +47,7 @@
                 android:text="Tên"
                 android:textColor="@color/colorBlack"
                 android:textSize="12sp" />
+
             <EditText
                 android:id="@+id/edtteneditaccount"
                 android:layout_width="match_parent"
@@ -60,6 +60,7 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="12sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -85,6 +86,7 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="12sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -110,6 +112,7 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="12sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -135,13 +138,14 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="12sp" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/layoutmotanhanvieneditaccount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:visibility="gone"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -168,8 +172,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="20dp"
-            android:visibility="gone"
-            />
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/btneditaccount"
