--- a/app/src/main/res/layout/dialog_thanhtoan.xml
+++ b/app/src/main/res/layout/dialog_thanhtoan.xml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="350dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
-    android:layout_height="wrap_content">
+    android:layout_width="350dp"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="5dp">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <RelativeLayout
-            android:gravity="top"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_margin="5dp"
-                android:id="@+id/imgclosethanhtoanbill"
-                android:layout_alignParentRight="true"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/ic_close"/>
-        </RelativeLayout>
-        <TextView
-            android:layout_marginBottom="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="top">
+
+            <ImageView
+                android:id="@+id/imgclosethanhtoanbill"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_margin="5dp"
+                android:src="@drawable/ic_close" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
             android:text="Phương phức thanh toán"
             android:textAlignment="center"
             android:textColor="@color/colorBlack"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:gravity="center_vertical"
             android:background="@drawable/custom_click_item_account"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
@@ -53,16 +55,18 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="15sp" />
         </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:visibility="gone"
-            android:background="@color/colorSilver"/>
+            android:background="@color/colorSilver"
+            android:visibility="gone" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:gravity="center_vertical"
             android:background="@drawable/custom_click_item_account"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
