--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -1,71 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/colorWhite"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="5dp"
+    android:background="@color/colorWhite"
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
+
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_marginLeft="10dp"
             android:id="@+id/imghinhkhcomment"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/example"/>
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/example" />
+
         <RelativeLayout
-            android:gravity="center_vertical"
-            android:layout_toRightOf="@+id/imghinhkhcomment"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:layout_toRightOf="@+id/imghinhkhcomment"
+            android:gravity="center_vertical">
+
             <TextView
+                android:id="@+id/tvtenkhcomment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="40dp"
-                android:id="@+id/tvtenkhcomment"
                 android:text="Tên khách hàng"
-                android:textSize="12sp"
-                android:textStyle="bold"
                 android:textColor="@color/colorBlack"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/tvngaytaocomment"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="5dp"
-                android:layout_below="@+id/tvtenkhcomment"
-                android:text="Ngày tạo"
-                android:textSize="10sp"
-                android:textColor="@color/colorSilver"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvtenkhcomment"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="40dp"
+                android:text="Ngày tạo"
+                android:textColor="@color/colorSilver"
+                android:textSize="10sp" />
 
         </RelativeLayout>
     </RelativeLayout>
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/tvnoidungcomment"
-            android:textColor="@color/colorGray"
-            android:textSize="10sp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="60dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="bjhdjshkjsakj"/>
-        <View
+            android:layout_marginLeft="60dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            android:text="bjhdjshkjsakj"
+            android:textColor="@color/colorGray"
+            android:textSize="10sp" />
+
+        <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorSilver"/>
+            android:layout_marginTop="5dp"
+            android:background="@color/colorSilver" />
 
     </LinearLayout>
 </LinearLayout>
