--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -1,115 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_marginBottom="5dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp">
 
     <LinearLayout
-        android:padding="5dp"
-        android:background="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@color/colorWhite"
+        android:orientation="vertical"
+        android:padding="5dp">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tvsttorder"
-                    android:padding="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/custom_border_img"
+                    android:padding="5dp"
                     android:text="001"
-                    android:textStyle="bold"
                     android:textColor="@color/colorTheme"
                     android:textSize="10sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/tvtencuahangorder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:text="Tên cửa hàng"
-                    android:textSize="12sp"
                     android:textColor="@color/colorBlack"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
             </LinearLayout>
+
             <TextView
                 android:id="@+id/tvtrangthaiorder"
-                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="Trạng thái"
                 android:textColor="@color/colorBlack"
-                android:textStyle="italic"
-                android:textSize="12sp"/>
+                android:textSize="12sp"
+                android:textStyle="italic" />
+
             <TextView
                 android:id="@+id/tvngaytaoorder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="10sp"
+                android:text="Ngày tạo"
                 android:textColor="@color/colorGray"
-                android:text="Ngày tạo"/>
+                android:textSize="10sp" />
         </LinearLayout>
+
         <View
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorSilver"/>
-        <RelativeLayout
-            android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:orientation="vertical"
+            android:background="@color/colorSilver" />
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="vertical">
 
 
             <TextView
-                android:layout_marginBottom="5dp"
-                android:layout_alignParentLeft="true"
-                android:textSize="12sp"
-                android:textColor="@color/colorBlack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tổng tiền: "/>
+                android:layout_alignParentLeft="true"
+                android:layout_marginBottom="5dp"
+                android:text="Tổng tiền: "
+                android:textColor="@color/colorBlack"
+                android:textSize="12sp" />
+
             <TextView
                 android:id="@+id/tvtongtienorder"
-                android:layout_marginBottom="5dp"
-                android:layout_alignParentRight="true"
-                android:textStyle="bold"
-                android:textSize="12sp"
-                android:textColor="@color/colorTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="200.000 đ"/>
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="5dp"
+                android:text="200.000 đ"
+                android:textColor="@color/colorTheme"
+                android:textSize="12sp"
+                android:textStyle="bold" />
         </RelativeLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorSilver"/>
+            android:background="@color/colorSilver" />
+
         <RelativeLayout
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
 
             <Button
                 android:id="@+id/btnorder"
-                android:background="@drawable/custom_click_btn_chitietbill"
-                android:layout_alignParentRight="true"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
-                android:textColor="@color/colorBlack"
-                android:textAllCaps="false"
-                android:textSize="10sp"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/custom_click_btn_chitietbill"
                 android:text="Order"
-                />
+                android:textAllCaps="false"
+                android:textColor="@color/colorBlack"
+                android:textSize="10sp" />
         </RelativeLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
