--- a/app/src/main/res/layout/item_product_order.xml
+++ b/app/src/main/res/layout/item_product_order.xml
@@ -1,83 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="5dp"
     app:cardCornerRadius="5dp">
 
     <LinearLayout
-        android:background="@color/colorWhite"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        android:orientation="horizontal">
 
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/imgsanphamorder"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/ic_launcher"
-                android:id="@+id/imgsanphamorder"/>
+                android:src="@mipmap/ic_launcher" />
         </FrameLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:padding="10dp">
+
             <TextView
                 android:id="@+id/tvtensanphamorder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tên sản phẩm"
-                android:maxLines="2"
                 android:ellipsize="end"
                 android:gravity="left"
                 android:lines="2"
                 android:maxWidth="170dp"
+                android:maxLines="2"
+                android:text="Tên sản phẩm"
                 android:textColor="@color/colorBlack"
-                android:textStyle="bold"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/tvsizesanphamorder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Vừa"
                 android:gravity="left"
+                android:text="Vừa"
                 android:textColor="@color/colorBlack"
-                android:textSize="12sp"
-                />
+                android:textSize="12sp" />
 
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp">
+                android:layout_height="30dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tvsoluongsanphamorder"
-                    android:textAlignment="center"
-                    android:background="@drawable/custom_border_img"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:text="3"
+                    android:background="@drawable/custom_border_img"
                     android:gravity="center_vertical"
+                    android:text="3"
+                    android:textAlignment="center"
                     android:textColor="@color/colorBlack"
                     android:textSize="12sp"
                     tools:ignore="RtlCompat" />
+
                 <TextView
                     android:id="@+id/tvtoppingsanphamorder"
-                    android:layout_marginLeft="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Topping"
+                    android:layout_marginLeft="5dp"
                     android:gravity="center_vertical"
+                    android:text="Topping"
                     android:textColor="@color/colorBlack"
                     android:textSize="12sp"
                     tools:ignore="RtlCompat" />
@@ -85,14 +87,13 @@
 
             <TextView
                 android:id="@+id/tvgiasanphamorder"
-                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="30000 đ"
+                android:layout_marginTop="5dp"
                 android:gravity="left"
+                android:text="30000 đ"
                 android:textColor="@color/colorBlack"
-                android:textSize="15sp"
-                />
+                android:textSize="15sp" />
         </LinearLayout>
 
     </LinearLayout>
