--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -18,6 +18,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
+            android:background="?android:attr/selectableItemBackground"
             android:padding="12dp"
             android:src="@drawable/back" />
 
@@ -216,7 +217,6 @@
                         android:textSize="12sp" />
 
                     <EditText
-                        android:paddingLeft="10dp"
                         android:id="@+id/edtghichubill"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
@@ -227,6 +227,7 @@
                         android:background="@drawable/custom_border_simple"
                         android:hint="..."
                         android:inputType="text"
+                        android:paddingLeft="10dp"
                         android:textColor="@color/colorBlack"
                         android:textSize="12sp" />
 
