--- a/app/src/main/res/layout/activity_bill_detail.xml
+++ b/app/src/main/res/layout/activity_bill_detail.xml
@@ -18,6 +18,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
+            android:background="?android:attr/selectableItemBackground"
             android:padding="12dp"
             android:src="@drawable/back" />
 
@@ -71,15 +72,15 @@
         android:weightSum="10">
 
         <ScrollView
-            android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="9.3">
+            android:layout_weight="9.3"
+            android:scrollbars="none">
 
             <LinearLayout
-                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -115,32 +116,31 @@
                             android:layout_height="match_parent"
                             android:layout_weight="4"
                             android:gravity="center"
-                            android:textStyle="bold"
                             android:text="Tên khách hàng"
                             android:textAlignment="center"
                             android:textColor="@color/colorBlack"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
                     <RelativeLayout
-                        android:layout_marginLeft="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        >
+                        android:layout_marginLeft="10dp">
 
                         <ImageView
                             android:id="@+id/imgicon"
-                            android:padding="10dp"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
-                            android:src="@drawable/ic_store"/>
+                            android:padding="10dp"
+                            android:src="@drawable/ic_store" />
 
                         <LinearLayout
-                            android:orientation="vertical"
-                            android:layout_toRightOf="@id/imgicon"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp">
+                            android:layout_height="40dp"
+                            android:layout_toRightOf="@id/imgicon"
+                            android:orientation="vertical">
 
                             <TextView
                                 android:id="@+id/tvtencuahangbilldetail"
@@ -167,17 +167,17 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/colorSilver"/>
+                        android:background="@color/colorSilver" />
 
                     <LinearLayout
-                        android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <LinearLayout
                             android:layout_width="0dp"
-                            android:layout_weight="1"
                             android:layout_height="50dp"
+                            android:layout_weight="1"
                             android:background="@color/colorWhite"
                             android:gravity="center"
                             android:orientation="vertical">
@@ -209,16 +209,16 @@
                         </LinearLayout>
 
                         <View
-                            android:layout_marginTop="10dp"
                             android:layout_width="1dp"
-                            android:layout_marginBottom="10dp"
                             android:layout_height="match_parent"
-                            android:background="@color/colorSilver"/>
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@color/colorSilver" />
 
                         <LinearLayout
                             android:layout_width="0dp"
-                            android:layout_weight="1"
                             android:layout_height="50dp"
+                            android:layout_weight="1"
                             android:background="@color/colorWhite"
                             android:gravity="center"
                             android:orientation="vertical">
@@ -270,23 +270,23 @@
                         android:gravity="center"
                         android:text="Trạng thái"
                         android:textAlignment="center"
-                        android:textStyle="italic"
                         android:textColor="@color/colorTheme"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:textStyle="italic" />
 
                     <TextView
-                        android:visibility="gone"
                         android:id="@+id/tvhuydonbilldetail"
-                        android:background="@drawable/custom_huydon_billdeatail"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="@drawable/custom_huydon_billdeatail"
                         android:gravity="center"
                         android:text="Hủy đơn"
-                        android:textStyle="italic"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:textStyle="italic"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
@@ -324,9 +324,9 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
                     android:background="@color/colorWhite"
                     android:gravity="center"
                     android:orientation="vertical">
