--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     android:background="@color/theme"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".activity.ForgotActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,15 +27,17 @@
                 android:text="Quên mật khẩu"
                 android:textColor="@color/colorWhite"
                 android:textSize="40sp" />
+
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:scaleType="fitXY"
                 android:src="@mipmap/ic_app_foreground" />
+
             <LinearLayout
-                android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -78,16 +80,17 @@
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
                 android:textSize="15sp" />
+
             <TextView
                 android:id="@+id/tvthongbaoquenmatkhau"
-                android:textAlignment="center"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Bạn sẽ nhận được một email để đặt lại mật khẩu."
-                android:textColor="@color/colorAqua"
-                android:maxLines="2"
+                android:layout_marginTop="10dp"
                 android:ellipsize="end"
+                android:maxLines="2"
+                android:text="Bạn sẽ nhận được một email để đặt lại mật khẩu."
+                android:textAlignment="center"
+                android:textColor="@color/colorAqua"
                 android:textSize="12sp" />
         </LinearLayout>
 
