--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,18 @@
     tools:context=".activity.MainActivity">
 
     <LinearLayout
-        android:gravity="center"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
         <ImageView
             android:id="@+id/imglogo"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:scaleType="fitXY"
             android:src="@mipmap/ic_app_foreground" />
+
         <TextView
             android:id="@+id/tvalphacoffee"
             android:layout_width="wrap_content"
@@ -26,8 +28,7 @@
             android:text="Alpha Coffee"
             android:textColor="@color/colorWhite"
             android:textSize="40sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
     </LinearLayout>
 
 
