--- a/app/src/main/res/layout/activity_order_list.xml
+++ b/app/src/main/res/layout/activity_order_list.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorTheme4"
+    android:orientation="vertical"
     tools:context=".activity.OrderListActivity">
 
     <RelativeLayout
@@ -20,6 +19,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
+            android:background="?android:attr/selectableItemBackground"
             android:padding="12dp"
             android:src="@drawable/back" />
 
@@ -39,26 +39,26 @@
     </RelativeLayout>
 
     <FrameLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvorderlist"
-            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            android:padding="5dp" />
+
         <TextView
             android:id="@+id/tvthongbaoorder"
-            android:layout_marginTop="50dp"
-            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
             android:text="Không có đơn nào"
-            android:visibility="gone"
-            android:textStyle="italic"
+            android:textAlignment="center"
             android:textColor="@color/colorSilver"
-            />
+            android:textStyle="italic"
+            android:visibility="gone" />
     </FrameLayout>
 
 </LinearLayout>
