--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -4,74 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorTheme4"
+    android:orientation="vertical"
     tools:context=".activity.ProductActivity">
 
     <RelativeLayout
-        android:gravity="center_vertical"
-        android:background="@color/colorTheme"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        >
+        android:background="@color/colorTheme"
+        android:gravity="center_vertical">
+
         <ImageView
             android:id="@+id/imgbackmenu"
-            android:layout_gravity="center_vertical"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/back"
-            android:padding="12dp"/>
+            android:layout_gravity="center_vertical"
+            android:background="?android:attr/selectableItemBackground"
+            android:padding="12dp"
+            android:src="@drawable/back" />
+
         <TextView
             android:id="@+id/tvmenu"
-            android:textAlignment="center"
-            android:layout_gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Menu"
+            android:layout_gravity="center_vertical"
             android:padding="8dp"
-            android:textStyle="bold"
-            android:textSize="20sp"
+            android:text="Menu"
+            android:textAlignment="center"
             android:textColor="@color/colorBlack"
+            android:textSize="20sp"
+            android:textStyle="bold"
             tools:ignore="RtlCompat" />
 
 
         <FrameLayout
-            android:layout_alignParentRight="true"
             android:layout_width="50dp"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true">
+
             <ImageView
-                android:visibility="gone"
                 android:id="@+id/imgshoppingcartmenu"
-                android:layout_gravity="center_vertical"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/ic_shopping_cart"
+                android:layout_gravity="center_vertical"
+                android:background="?android:attr/selectableItemBackground"
                 android:padding="12dp"
-                />
+                android:src="@drawable/ic_shopping_cart"
+                android:visibility="gone" />
+
             <ImageView
-                android:visibility="gone"
                 android:id="@+id/imgdotproduct"
-                android:layout_gravity="right"
                 android:layout_width="25dp"
                 android:layout_height="35dp"
-                android:src="@drawable/ic_dot"
+                android:layout_gravity="right"
                 android:padding="8dp"
-                />
+                android:src="@drawable/ic_dot"
+                android:visibility="gone" />
         </FrameLayout>
 
     </RelativeLayout>
 
     <com.google.android.material.tabs.TabLayout
-        android:layout_marginTop="5dp"
         android:id="@+id/tablayoutproduct"
-        app:tabSelectedTextColor="@color/colorTheme"
-        app:tabMode="fixed"
-        app:tabTextAppearance="@style/MyCustomTextAppearance"
-        app:tabTextColor="@color/colorBlack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:background="@color/colorWhite"
         app:tabIndicatorColor="@color/colorTheme"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/colorTheme"
+        app:tabTextAppearance="@style/MyCustomTextAppearance"
+        app:tabTextColor="@color/colorBlack">
 
     </com.google.android.material.tabs.TabLayout>
 
