--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@color/colorWhite"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
-    android:layout_height="500dp">
+    android:layout_height="500dp"
+    android:background="@color/colorWhite"
+    android:orientation="vertical">
+
     <RelativeLayout
-        android:gravity="top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="top">
+
         <ImageView
-            android:layout_margin="5dp"
             android:id="@+id/imgclosechangepass"
-            android:layout_alignParentRight="true"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/ic_close"/>
+            android:layout_alignParentRight="true"
+            android:layout_margin="5dp"
+            android:src="@drawable/ic_close" />
     </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,9 +35,6 @@
             android:textSize="20sp" />
 
 
-
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,6 +47,7 @@
                 android:text="Mật khẩu cũ"
                 android:textColor="@color/colorBlack"
                 android:textSize="12sp" />
+
             <EditText
                 android:id="@+id/edtmatkhaucu"
                 android:layout_width="match_parent"
@@ -62,6 +62,7 @@
                 android:textColorHint="@color/colorSilver"
                 android:textSize="12sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,6 +90,7 @@
                 android:textColorHint="@color/colorSilver"
                 android:textSize="12sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -122,8 +124,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="20dp"
-            android:visibility="gone"
-            />
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/btndoimatkhau"
