--- a/app/src/main/res/layout/dialog_daxong_orderdetail.xml
+++ b/app/src/main/res/layout/dialog_daxong_orderdetail.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
-    android:backgroundTint="@color/colorTheme4"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/colorTheme4">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="30dp"
             android:text="Cập nhật hoàn thành cho đơn hàng!"
             android:textAlignment="center"
             android:textColor="@color/colorBlack"
             android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorAqua"/>
+            android:background="@color/colorAqua" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,28 +33,30 @@
 
             <TextView
                 android:id="@+id/tvkhongcapnhat"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/custom_click_item_order"
                 android:padding="15dp"
-                android:textAlignment="center"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
                 android:text="Không"
+                android:textAlignment="center"
                 android:textColor="@color/colorWhite"
                 android:textSize="15sp" />
+
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/colorAqua"/>
+                android:background="@color/colorAqua" />
+
             <TextView
                 android:id="@+id/tvcocapnhat"
-                android:padding="15dp"
-                android:background="@drawable/custom_click_item_order"
-                android:textAlignment="center"
-                android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/custom_click_item_order"
+                android:padding="15dp"
                 android:text="Có"
+                android:textAlignment="center"
                 android:textColor="@color/colorWhite"
                 android:textSize="15sp" />
         </LinearLayout>
