--- a/app/src/main/res/layout/dialog_edit_img_account.xml
+++ b/app/src/main/res/layout/dialog_edit_img_account.xml
@@ -1,71 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <LinearLayout
-        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:padding="10dp">
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <ImageView
-                android:layout_alignParentRight="true"
                 android:id="@+id/imgcloseuploadimgkhachhang"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_alignParentRight="true"
                 android:scaleType="fitXY"
-                android:src="@drawable/ic_close"
-                />
+                android:src="@drawable/ic_close" />
         </RelativeLayout>
 
         <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/custom_border_img"
-            android:layout_width="300dp"
-            android:layout_height="300dp">
+            android:background="@drawable/custom_border_img">
+
             <ImageView
-                android:padding="5dp"
                 android:id="@+id/imguploadkhachhang"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="5dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/example"
-                />
+                android:src="@drawable/example" />
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:padding="10dp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:padding="10dp">
+
             <ImageView
                 android:id="@+id/imgcamera"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_camera"/>
+                android:src="@drawable/ic_camera" />
+
             <ImageView
                 android:id="@+id/imgfolder"
-                android:layout_marginLeft="40dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_folder"/>
+                android:layout_marginLeft="40dp"
+                android:src="@drawable/ic_folder" />
         </LinearLayout>
+
         <info.hoang8f.widget.FButton
             android:id="@+id/btnuploadimgkhachhang"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Upload Image"
             android:textAllCaps="false"
-            android:textColor="@color/colorWhite"/>
+            android:textColor="@color/colorWhite" />
     </LinearLayout>
 
 </LinearLayout>
