--- a/app/src/main/res/layout/dialog_stt_order.xml
+++ b/app/src/main/res/layout/dialog_stt_order.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
     <RelativeLayout
-        android:gravity="top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="top">
+
         <ImageView
-            android:layout_margin="5dp"
             android:id="@+id/imgclosesttorder"
-            android:layout_alignParentRight="true"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/ic_close"/>
+            android:layout_alignParentRight="true"
+            android:layout_margin="5dp"
+            android:src="@drawable/ic_close" />
     </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,21 +44,21 @@
                 android:text="Số thứ tự"
                 android:textColor="@color/colorBlack"
                 android:textSize="12sp" />
+
             <EditText
                 android:id="@+id/edtsttorder"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/custom_border_edittext_change_pass"
+                android:hint="001"
                 android:inputType="number"
+                android:maxLength="3"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
-                android:hint="001"
-                android:maxLength="3"
                 android:textColor="@color/colorBlack"
                 android:textSize="12sp" />
         </LinearLayout>
-
 
 
         <Button
