--- a/app/src/main/res/layout/fragment_douong.xml
+++ b/app/src/main/res/layout/fragment_douong.xml
@@ -1,38 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_marginTop="5dp"
-        android:padding="5dp"
-        android:background="@color/colorTheme1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorTheme1"
+        android:padding="5dp">
+
         <EditText
             android:id="@+id/edttimkiemdouong"
-            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/colorWhite"
+            android:hint="Tìm theo tên"
             android:inputType="text"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:hint="Tìm theo tên"
-            android:textColorHint="@color/colorSilver"
+            android:textAlignment="center"
             android:textColor="@color/colorBlack"
+            android:textColorHint="@color/colorSilver"
             android:textSize="12sp" />
     </LinearLayout>
+
     <LinearLayout
-        android:padding="5dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="5dp">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvdouong"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </LinearLayout>
