--- a/app/src/main/res/layout/fragment_newspaper.xml
+++ b/app/src/main/res/layout/fragment_newspaper.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorTheme4"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorTheme4"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,36 +13,35 @@
         android:gravity="center_vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            custom:civ_border_width="1dp"
-            custom:civ_border_color="@color/colorBlack"
-            android:layout_marginLeft="10dp"
             android:id="@+id/imghinhaccount"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/example" />
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/example"
+            custom:civ_border_color="@color/colorBlack"
+            custom:civ_border_width="1dp" />
 
         <TextView
-            android:layout_toRightOf="@id/imghinhaccount"
             android:id="@+id/tvtenaccount"
             android:layout_width="280dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
+            android:layout_toRightOf="@id/imghinhaccount"
             android:padding="15dp"
             android:text="Tên"
             android:textColor="@color/colorBlack"
             android:textSize="15sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/layoutdiem"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/tvdiemaccount"
@@ -67,10 +66,10 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:orientation="vertical"
-        android:weightSum="10"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="10">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -79,86 +78,89 @@
 
 
             <androidx.viewpager2.widget.ViewPager2
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingStart="40dp"
-                android:paddingEnd="40dp"
                 android:id="@+id/viewpagerslide"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:paddingStart="40dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="40dp"
+                android:paddingBottom="10dp">
 
             </androidx.viewpager2.widget.ViewPager2>
         </LinearLayout>
+
         <LinearLayout
-            android:visibility="gone"
-            android:orientation="vertical"
-            android:background="@color/colorWhite"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2.1">
+            android:layout_weight="2.1"
+            android:background="@color/colorWhite"
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:text="Khuyến mãi của bạn"
-                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
                 android:textSize="12sp"
-                android:textColor="@color/colorBlack"/>
+                android:textStyle="bold" />
 
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="100dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:layout_weight="4"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    />
+                    android:layout_weight="4" />
+
                 <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="2"
-                    android:layout_height="match_parent">
+                    android:layout_weight="2">
+
                     <TextView
-                        android:background="@drawable/custom_bg_khuyenmai"
-                        android:paddingTop="20dp"
-                        android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@drawable/custom_bg_khuyenmai"
+                        android:paddingTop="20dp"
                         android:text="Săn khuyến mãi"
-                        android:textStyle="bold"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorWhite"
                         android:textSize="12sp"
-                        android:textColor="@color/colorWhite"/>
+                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
-            android:layout_marginBottom="55dp"
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="6.6">
+            android:layout_marginBottom="55dp"
+            android:layout_weight="6.6"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="Tin tức mới"
-                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
                 android:textSize="12sp"
-                android:textColor="@color/colorBlack"/>
+                android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_margin="5dp"
-                android:layout_marginTop="15dp"
                 android:id="@+id/rvtintuc"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_marginTop="15dp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
