--- a/app/src/main/res/layout/fragment_order_dang_xu_ly.xml
+++ b/app/src/main/res/layout/fragment_order_dang_xu_ly.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <TextView
         android:id="@+id/tvthongbaoorderdangxuly"
-        android:layout_marginTop="40dp"
-        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="Không có đơn nào"
-        android:textStyle="italic"
+        android:textAlignment="center"
         android:textColor="@color/colorSilver"
-        />
+        android:textStyle="italic" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="5dp"
-        android:visibility="visible"
         android:id="@+id/rvorderdangxuly"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:visibility="visible">
 
     </androidx.recyclerview.widget.RecyclerView>
 </FrameLayout>
