--- a/app/src/main/res/layout/item_tintuc.xml
+++ b/app/src/main/res/layout/item_tintuc.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -55,14 +54,14 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_marginTop="5dp"
                 android:id="@+id/tvnoidungtintuc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="left"
-                android:text="30000"
+                android:layout_marginTop="5dp"
                 android:ellipsize="end"
+                android:gravity="left"
                 android:maxLines="2"
+                android:text="30000"
                 android:textColor="@color/colorBlack"
                 android:textSize="10sp" />
 
